--- a/components/SideNav/SideNav.module.scss
+++ b/components/SideNav/SideNav.module.scss
@@ -1,11 +1,18 @@
 .SideNav {
   position: absolute;
+  display: inline-block;
   height: 100vh;
   width: 300px;
   background-color: white;
   border-radius: 0 25px 25px 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   top: 0px;
-  left: 0;
+  left: 0px;
   margin-right: 15px;
   padding: 20px;
+}
+
+.resources {
+  position: absolute;
+  top: 15rem;
 }
